findik-net/files/iptables-rules
# Generated by iptables-save v1.4.6 on Tue Apr 13 16:26:54 2010
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -i lo -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 81 -m state --state NEW,ESTABLISHED -j ACCEPT 
-A INPUT -i eth1 -p tcp -m tcp --dport 8080 -j ACCEPT 
-A INPUT -i eth1 -p tcp -m tcp --dport 8443 -j ACCEPT 
-A INPUT -i eth1 -p tcp -m tcp --sport 68 --dport 67 -j ACCEPT 
-A INPUT -i eth1 -p udp -m udp --sport 68 --dport 67 -j ACCEPT 
-A FORWARD -p icmp -j ACCEPT 
-A FORWARD -s 10.11.12.0/24 -i eth1 -o eth0 -j ACCEPT 
-A FORWARD -d 10.11.12.0/24 -i eth0 -o eth1 -j ACCEPT 
-A OUTPUT -o lo -j ACCEPT 
-A OUTPUT -p icmp -j ACCEPT 
-A OUTPUT -m state --state NEW,ESTABLISHED -j ACCEPT 
COMMIT
# Completed on Tue Apr 13 16:26:54 2010
# Generated by iptables-save v1.4.6 on Tue Apr 13 16:26:54 2010
*nat
:PREROUTING ACCEPT [170:19405]
:POSTROUTING ACCEPT [43:2568]
:OUTPUT ACCEPT [98:6021]
-A PREROUTING -i eth1 -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 8080 
-A PREROUTING -i eth1 -p tcp -m tcp --dport 443 -j REDIRECT --to-ports 8443 
-A POSTROUTING -o eth0 -j MASQUERADE 
COMMIT
# Completed on Tue Apr 13 16:26:54 2010
